--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,6 @@
     <string name="attachment_summary_off">attachment_summary_off</string>
     <string name="attachment_summary_on">attachment_summary_on</string>
     <string name="attachment_title">attachment_title</string>
-    <string name="profile">Profile</string>
     <string name="settings">Settings</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
@@ -37,7 +36,7 @@
     <!-- Strings used for fragments for navigation -->
 
 
-    <string name="title_activity_create_breakfast_recipe">activity_create_breakfastRecipe</string>
+    <string name="title_activity_create_breakfast_recipe">Create Recipe</string>
     <string name="lbl_createBreakfast">Create Breakfast</string>
     <string name="lbl_notes">Create Notes</string>
     <string name="lbl_date">Recipe Date</string>
@@ -56,6 +55,51 @@
     <string name="breakfast">breakfast</string>
     <string name="lunch">lunch</string>
     <string name="dinner">dinner</string>
+    <string name="recipe_name">Recipe Name</string>
+
+
+    <string name="search_your_recipes">search your recipes...</string>
+    <string name="_360_000_recipes">360,000 recipes</string>
+    <string name="search_over">search over</string>
+    <string name="homechef">HomeChef</string>
+    <string name="img_of_recipe">img of recipe</string>
+    <string name="recipe_title">Recipe Title</string>
+    <string name="ready_in">Ready In</string>
+    <string name="servings">Servings</string>
+    <string name="default_servings_value">000</string>
+    <string name="ready_in_min_img">ready in min img</string>
+    <string name="img_des">img_des</string>
+    <string name="login">LOGIN</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="new_user">New User?</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="main_picture">main picture</string>
+    <string name="register">REGISTER</string>
+    <string name="reset_password">RESET PASSWORD</string>
+    <string name="reset">reset</string>
+    <string name="logout">Logout</string>
+    <string name="logo">logo</string>
+    <string name="ingredient_image">ingredient image</string>
+    <string name="item_name">Item Name</string>
+    <string name="the_search_results_for">The Search Results For:</string>
+    <string name="ingredients_list">Ingredients List</string>
+    <string name="choose_your_ingridents">Choose Your Ingridents</string>
+    <string name="min">MIN</string>
+    <string name="_000">000</string>
+    <string name="mins">mins</string>
+    <string name="health">health</string>
+    <string name="vegetarian">vegetarian</string>
+    <string name="not_healthy">Not Healthy</string>
+    <string name="ingridients">Ingridients</string>
+    <string name="instructions">Instructions</string>
+    <string name="ingredient_name">Ingredient Name</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="home">Home</string>
+    <string name="favorites">Favorites</string>
+    <string name="you_haven_t_saved_any_favorite_recipes_yet">You haven\'t saved any favorite recipes yet</string>
+    <string name="no_results_found">No results found</string>
 
 
 </resources>
